[package]
name = "decompress"
version = "0.6.0"
edition = "2021"

description = "Extracting archives made easy"
authors = ["Dotan Nahum <dotan@rng0.io>"]
documentation = "https://docs.rs/decompress/"
repository = "https://github.com/rusty-ferris-club/decompress"
keywords = ["compression", "archive", "unpack", "tar", "zip"]
license = "Apache-2.0"
readme = "../README.md"

[features]
default = ["all"]
all = [
  "tarball",
  "tarxz",
  "targz",
  "tarbz",
  "tarzst",
  "zip",
  "ar",
  "gz",
  "bz2",
  "xz",
  "zstd",
  "rar",
]

tarball = ["dep:tar"]
tarzst = ["tarball", "dep:zstd"]
targz = ["tarball", "dep:flate2"]
tarbz = ["tarball", "dep:bzip2"]
bz2 = ["dep:bzip2"]
tarxz = ["tarball", "dep:xz"]
zip = ["dep:zip"]
gz = ["dep:flate2"]
ar = ["dep:ar"]
xz = ["dep:xz"]
zstd = ["dep:zstd"]
rar = ["dep:unrar"]

[dependencies]

regex = "1.10.3"
lazy_static = "1.4.0"
thiserror = "1.0.57"
derive_builder = "0.20.0"
ar = { version = "0.9.0", optional = true }
tar = { version = "0.4.40", optional = true }
zip = { version = "0.6.6", optional = true }
bzip2 = { version = "0.4.4", optional = true }
flate2 = { version = "1.0.28", optional = true }
xz = { version = "0.1.0", optional = true }
zstd = { version = "0.13.0", optional = true }
unrar = { version = "0.5.3", optional = true }
infer = "0.15.0"

[dev-dependencies]
dircmp = "0.2.0"
rstest = "0.18.2"
clap = { version = "4.5.2", features = ["cargo"] }
insta = "1.36.1"

[[test]]
name = "archives_test"
required-features = ["all"]

[[example]]
name = "unpack"
required-features = ["default"]

[[example]]
name = "unzip"
required-features = ["zip"]
